[gd_scene load_steps=32 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Images/Icons/Attack-Normal.png" type="Texture" id=3]
[ext_resource path="res://Images/Icons/Attack-Nover.png" type="Texture" id=4]
[ext_resource path="res://Images/Icons/Deffend-Hover.png" type="Texture" id=5]
[ext_resource path="res://Images/Icons/Left-Hover.png" type="Texture" id=6]
[ext_resource path="res://Images/Icons/Magic-Hover.png" type="Texture" id=7]
[ext_resource path="res://Images/Icons/Up-Normal.png" type="Texture" id=8]
[ext_resource path="res://Images/Icons/Up-Hover.png" type="Texture" id=9]
[ext_resource path="res://Images/Icons/Right-Normal.png" type="Texture" id=10]
[ext_resource path="res://Images/Icons/Magic-Normal.png" type="Texture" id=11]
[ext_resource path="res://Images/Icons/Left-Normal.png" type="Texture" id=12]
[ext_resource path="res://Images/Icons/Deffend-Normal.png" type="Texture" id=13]
[ext_resource path="res://Images/Icons/Right-Hover.png" type="Texture" id=14]
[ext_resource path="res://Images/Progress/Progress.png" type="Texture" id=15]
[ext_resource path="res://Images/Progress/Under.png" type="Texture" id=16]
[ext_resource path="res://Scenes/Volume.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Tutorial.tscn" type="PackedScene" id=18]

[sub_resource type="InputEventAction" id=1]
action = "Q"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "W"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "E"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=7]
action = "ui_left"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventAction" id=9]
action = "ui_up"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventAction" id=11]
action = "ui_right"

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="Animation" id=13]
resource_name = "Idle"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Enemy:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 6, -0.25, 0, 0.25, 0, 5.8, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Enemy:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 6, -0.25, 0, 0.25, 0, 5.8, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Actions:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1.9, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Actions:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1.9, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 760.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Actions" type="GridContainer" parent="."]
margin_left = 200.0
margin_top = 542.0
margin_right = 400.0
margin_bottom = 674.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 100, 66 )
size_flags_horizontal = 7
size_flags_vertical = 7
columns = 3

[node name="Deffend" type="TextureButton" parent="Actions"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 6
size_flags_vertical = 6
shortcut = SubResource( 2 )
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Magic" type="TextureButton" parent="Actions"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 6
size_flags_vertical = 6
shortcut = SubResource( 4 )
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Attack" type="TextureButton" parent="Actions"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 6
size_flags_vertical = 6
shortcut = SubResource( 6 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Left" type="TextureButton" parent="Actions"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 6
size_flags_vertical = 6
shortcut = SubResource( 8 )
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Up" type="TextureButton" parent="Actions"]
margin_left = 68.0
margin_top = 68.0
margin_right = 132.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 6
size_flags_vertical = 6
shortcut = SubResource( 10 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
expand = true

[node name="Right" type="TextureButton" parent="Actions"]
margin_left = 136.0
margin_top = 68.0
margin_right = 200.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 6
size_flags_vertical = 6
shortcut = SubResource( 12 )
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 14 )
expand = true

[node name="Enemy" type="Sprite" parent="."]
position = Vector2( 300, 272 )
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )

[node name="RemainingTime" type="TextureProgress" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 584.0
margin_bottom = 56.0
max_value = 30.0
value = 30.0
texture_under = ExtResource( 16 )
texture_progress = ExtResource( 15 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
pause_mode = 2

[node name="Failed" type="Node2D" parent="."]
visible = false

[node name="Sucess" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="Sucess"]
margin_left = 168.0
margin_top = 160.0
margin_right = 221.0
margin_bottom = 205.0
rect_scale = Vector2( 5, 5 )
text = "Boss is coming!"
align = 1
valign = 1
autowrap = true

[node name="Clock" type="Timer" parent="."]
autostart = true

[node name="Clock" type="AudioStreamPlayer" parent="Clock"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 13 )

[node name="Volume" parent="." instance=ExtResource( 17 )]

[node name="Tutorial" parent="." instance=ExtResource( 18 )]

[connection signal="button_up" from="Actions/Deffend" to="." method="_on_Deffend_button_up"]
[connection signal="button_up" from="Actions/Magic" to="." method="_on_Magic_button_up"]
[connection signal="button_up" from="Actions/Attack" to="." method="_on_Attack_button_up"]
[connection signal="button_up" from="Actions/Left" to="." method="_on_Left_button_up"]
[connection signal="button_up" from="Actions/Up" to="." method="_on_Up_button_up"]
[connection signal="button_up" from="Actions/Right" to="." method="_on_Right_button_up"]
[connection signal="value_changed" from="RemainingTime" to="." method="_on_RemainingTime_value_changed"]
[connection signal="finished" from="Audio" to="." method="_on_Audio_finished"]
[connection signal="timeout" from="Clock" to="." method="_on_Clock_timeout"]
